--- a/001-building_your_first_application/01-downloading_and_configuration/Todo.txt
+++ b/001-building_your_first_application/01-downloading_and_configuration/Todo.txt
@@ -1,4 +1,6 @@
 1. See the 'Wonderful World of Composer' tutorial at http://bit.ly/KnpU-Composer
 2. http://stackoverflow.com/questions/33909559/php-composer-xdebug-warning
-3. Official installer to install the Symfony full-stack framework: https://github.com/symfony/symfony-installer
-4. Install Symfony with PEAR: https://jonpolygon.com/installing-symfony-wamp/
+3. http://knpuniversity.com/screencast/php-namespaces-in-120-seconds
+
+
+Install PHP annotations and symfony plugins for PHPstorm.
